[Add] Douban API support

--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,3 +1,12 @@
-<view class='container'>
-<text style='font-weight:bold; font-size:60rpx;'>Under Construction</text>
+<view class='container'> 
+
+    <image src='{{movie.image}}' class='detail-image' mode='aspectFill'></image>
+    <text style='font-weight:bold; font-size:40rpx;'>{{movie.alt_title}}</text>
+    <text>评分: {{movie.rating.average}} ( {{movie.rating.numRaters}} 人评价 )</text>
+    <scroll-view scroll-y="{{true}}" style="height: 250px;">
+    <view class='detail-intro'> 
+      <text style='font-weight:bold;'>电影简介: </text>
+      <text>{{movie.summary}}</text>
+    </view>
+    </scroll-view>
 </view>
